--- a/app/globals.css
+++ b/app/globals.css
@@ -551,15 +551,15 @@ html {
 }
 
 .lang-en .hero-title {
-  @apply text-3xl sm:text-6xl md:text-3xl lg:text-6xl font-bold leading-none tracking-tight hyphens-auto;
+  @apply text-5xl sm:text-6xl lg:text-6xl font-bold leading-none tracking-tight hyphens-auto text-center sm:text-left;
 }
 .lang-si .hero-title {
-  @apply text-3xl sm:text-5xl md:text-6xl lg:text-6xl font-bold leading-tight tracking-tight hyphens-auto;
+  @apply text-3xl sm:text-5xl md:text-6xl lg:text-6xl font-bold leading-tight tracking-tight hyphens-auto text-center sm:text-left;
 }
 .lang-ta .hero-title {
-  @apply text-2xl sm:text-4xl md:text-5xl lg:text-5xl font-bold leading-none tracking-tight hyphens-auto;
+  @apply text-2xl sm:text-4xl md:text-5xl lg:text-5xl font-bold leading-none tracking-tight hyphens-auto text-center sm:text-left;
 }
 
 .lang-ta .hero-subtitle {
-  @apply text-sm sm:text-base md:text-lg lg:text-xl leading-tight tracking-tight hyphens-auto;
+  @apply text-sm sm:text-base md:text-lg lg:text-xl leading-tight tracking-tight hyphens-auto text-center sm:text-left;
 }
